app-deploy/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: application
spec:
  type: NodePort 
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
